# FastImagingPipe

./: .gitattributes  .gitignore  FIPkernels.cu  Makefile  Makefile.gpu  README.md  SVDPreprocessGpu.h  SVDPreprocessKernels.cu  SVDPreprocessMain.cpp  SVD_MFS.py  Vin.fits  Visimag.fits  Visreal.fits  meson.build  meson_options.txt  pipe_interface.cpp
NoReproj/: FIPkernels.cu  pipe_interface.cpp
WithReproj/: FIPkernels.cu  Makefile
src/: FIPkernels.cu  fip-pipeline-cuda-state.h  meson.build  pipe_interface.cpp  utils.c  utils.h
src/tools/: main-pipe.c  main.c  meson.build
subprojects/: cfitsio.wrap  popt.wrap
